correccion de maquetado

--- a/index.css
+++ b/index.css
@@ -15,15 +15,18 @@
 /*colors palette*/
 :root {
   --color--general: #fff;
+  --color--general2: rgba(0,0,0,0.5);
   --color--navBackground: #29292c;
   --color--equipoBackground: #c4c4c4;
   --color--sectionBackground: rgba(196, 196, 196, 0.3);
 }
 
 /*general styles*/
+html{
+    scroll-behavior: smooth;
+}
 body {
   font-family: "Lato", sans-serif;
-  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
@@ -85,7 +88,7 @@ nav ul li a {
 }
 #portada p {
   margin-top: 1rem;
-  opacity: 50%;
+  opacity: 65%;
   font-size: 1.2rem;
 }
 /*Section - Equipo*/
@@ -100,13 +103,20 @@ nav ul li a {
   padding-top: 1.5rem;
   text-align: center;
   font-style: italic;
+  font-weight: 100;
+  color: var(--color--general2)
 }
+
 /* Section - Servicios*/
 #servicios {
   padding: 1.5rem;
   text-align: center;
   width: 100%;
   margin: 0 auto;
+}
+#servicios h2{
+    font-weight: 400;
+    font-size: 2rem;
 }
 .services-grid {
   display: grid;
@@ -115,6 +125,24 @@ nav ul li a {
   max-width: 1200px;
   margin: 2rem auto 4rem auto;
 }
+.servicio i, 
+.servicio h5{
+    margin-bottom: 0.5rem;
+}
+.servicio i.far,
+.servicio i.fas,
+.servicio i.fab {
+    font-size: 2rem;
+}
+.servicio h5{
+    font-weight: 600;
+}
+.servicio p{
+    font-weight: 100;
+    line-height: 1.3rem;
+    text-align: justify;
+}
+
 /*Section - Contactos*/
 #contactos {
   display: flex;
@@ -123,7 +151,7 @@ nav ul li a {
   text-align: center;
   background: var(--color--sectionBackground);
   height: 100px;
-  color: rgba(0,0,0,0.5);
+  color: var(--color--general2);
 }
 #contactos ul {
   display: flex;
@@ -134,8 +162,8 @@ nav ul li a {
   font-size: 1rem;
 }
 #contactos ul li a{
-    color: rgba(0,0,0,0.5);
-  }
+    color: var(--color--general2);
+}
 #contactos ul li i {
   margin-right: 5px;
 }
