--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ nav {
   color: var(--color--navFont);
   font-size: 1rem;
 }
+
 nav ul {
   display: flex;
   justify-content: flex-end;
@@ -54,6 +55,16 @@ nav ul {
   width: 50%;
   height: 100%;
   margin-right: 30px;
+}
+@media(max-width: 550px){
+    nav{
+        height: 5vh;
+    }
+    nav ul{
+        width: 100%;
+        justify-content: center;
+        margin-right: 0;
+    }
 }
 nav ul li {
     display: flex;
@@ -75,6 +86,11 @@ nav ul li:hover {
   position: relative;
   top: 10vh;
 }
+@media(max-width: 550px){
+    .container{
+        top:5vh;
+    }
+}
 #portada {
   display: flex;
   flex-direction: column;
@@ -92,6 +108,11 @@ nav ul li:hover {
   background-size: cover;
   background-position: center;
 }
+@media(max-width:550px){
+    #portada{
+        height: 40vh;
+    }
+}
 #portada h1 {
   color: var(--color--general);
   font-size: 4rem;
@@ -106,6 +127,11 @@ nav ul li:hover {
   position: relative;
   height: 20vh;
   background: var(--color--sectionBackground);
+}
+@media(max-width:550px){
+    #equipo{
+        height: 10vh;
+    }
 }
 #equipo article {
   max-width: 450px;
@@ -171,6 +197,11 @@ nav ul li:hover {
   padding: 0 10px;
   font-size: 1rem;
 }
+@media(max-width:550px){
+    #contactos ul li {
+        font-size: 0.8rem;
+      }
+}
 #contactos ul li a{
     color: var(--color--general2);
 }
@@ -191,4 +222,9 @@ nav ul li:hover {
     background-color: var(--color--navBackground);
     color: var(--color--general);
     font-size: 0.7rem;
+}
+@media(max-width:550px){
+    #footer{
+        justify-content: center;
+    }
 }
