--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 /*colors palette*/
 :root {
   --color--general: #fff;
-  --color--general2: rgba(0,0,0,0.5);
+  --color--general2: rgba(0,0,0,0.7);
   --color--navBackground: #29292c;
   --color--equipoBackground: #c4c4c4;
   --color--sectionBackground: rgba(196, 196, 196, 0.3);
@@ -199,6 +199,11 @@ nav ul li:hover {
   display: flex;
   text-align: center;
 }
+@media(max-width:550px){
+    #contactos ul {
+        flex-direction: column;
+      }
+}
 #contactos ul li {
   padding: 0 10px;
   font-size: 1rem;
@@ -206,6 +211,7 @@ nav ul li:hover {
 @media(max-width:550px){
     #contactos ul li {
         font-size: 0.8rem;
+        margin: 0.3rem 0;
       }
 }
 #contactos ul li a{
@@ -232,5 +238,6 @@ nav ul li:hover {
 @media(max-width:550px){
     #footer{
         justify-content: center;
+        font-size: 0.5rem;
     }
 }
