--- a/index.css
+++ b/index.css
@@ -15,15 +15,15 @@
 /*colors palette*/
 :root {
   --color--general: #fff;
-  --color--general2: rgba(0,0,0,0.7);
+  --color--general2: rgba(0, 0, 0, 0.8);
   --color--navBackground: #29292c;
   --color--equipoBackground: #c4c4c4;
   --color--sectionBackground: rgba(196, 196, 196, 0.3);
 }
 
 /*general styles*/
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 body {
   font-family: "Lato", sans-serif;
@@ -56,20 +56,20 @@ nav ul {
   height: 100%;
   margin-right: 30px;
 }
-@media(max-width: 550px){
-    nav{
-        height: 10vh;
-    }
-    nav ul{
-        width: 100%;
-        justify-content: center;
-        margin-right: 0;
-    }
+@media (max-width: 550px) {
+  nav {
+    height: 10vh;
+  }
+  nav ul {
+    width: 100%;
+    justify-content: center;
+    margin-right: 0;
+  }
 }
 nav ul li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 20px;
   height: 100%;
 }
@@ -77,19 +77,18 @@ nav ul li a {
   color: var(--color--general);
 }
 nav ul li:hover {
-    background:var(--color--general2)
+  background: var(--color--general2);
 }
-
 
 /*container's elements*/
 .container {
   position: relative;
   top: 10vh;
 }
-@media(max-width: 550px){
-    .container{
-        top:10vh;
-    }
+@media (max-width: 550px) {
+  .container {
+    top: 10vh;
+  }
 }
 #portada {
   display: flex;
@@ -108,14 +107,19 @@ nav ul li:hover {
   background-size: cover;
   background-position: center;
 }
-@media(max-width:550px){
-    #portada{
-        height: 40vh;
-    }
+@media (max-width: 550px) {
+  #portada {
+    height: 40vh;
+  }
 }
 #portada h1 {
   color: var(--color--general);
   font-size: 4rem;
+}
+@media (max-width: 550px) {
+  #portada h1 {
+    font-size: 3rem;
+  }
 }
 #portada p {
   margin-top: 1rem;
@@ -128,26 +132,25 @@ nav ul li:hover {
   height: 20vh;
   background: var(--color--sectionBackground);
 }
-@media(max-width:550px){
-    #equipo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        padding: 1rem;
-    }
+@media (max-width: 550px) {
+  #equipo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 1rem;
+  }
 }
 #equipo article {
-    width: 100%;
+  width: 100%;
   max-width: 450px;
   margin: 0 auto;
   padding: 1.5rem;
   text-align: center;
   font-style: italic;
   font-weight: 100;
-  color: var(--color--general2)
+  color: var(--color--general2);
 }
-
 
 /* Section - Servicios*/
 #servicios {
@@ -156,9 +159,9 @@ nav ul li:hover {
   width: 100%;
   margin: 0 auto;
 }
-#servicios h2{
-    font-weight: 400;
-    font-size: 2rem;
+#servicios h2 {
+  font-weight: 400;
+  font-size: 2rem;
 }
 .services-grid {
   display: grid;
@@ -167,22 +170,22 @@ nav ul li:hover {
   max-width: 1200px;
   margin: 2rem auto 4rem auto;
 }
-.servicio i, 
-.servicio h5{
-    margin-bottom: 0.5rem;
+.servicio i,
+.servicio h5 {
+  margin-bottom: 0.5rem;
 }
 .servicio i.far,
 .servicio i.fas,
 .servicio i.fab {
-    font-size: 2rem;
+  font-size: 2rem;
 }
-.servicio h5{
-    font-weight: 600;
+.servicio h5 {
+  font-weight: 600;
 }
-.servicio p{
-    font-weight: 100;
-    line-height: 1.3rem;
-    text-align: justify;
+.servicio p {
+  font-weight: 100;
+  line-height: 1.3rem;
+  text-align: justify;
 }
 
 /*Section - Contactos*/
@@ -199,45 +202,45 @@ nav ul li:hover {
   display: flex;
   text-align: center;
 }
-@media(max-width:550px){
-    #contactos ul {
-        flex-direction: column;
-      }
+@media (max-width: 550px) {
+  #contactos ul {
+    flex-direction: column;
+  }
 }
 #contactos ul li {
   padding: 0 10px;
   font-size: 1rem;
 }
-@media(max-width:550px){
-    #contactos ul li {
-        font-size: 0.8rem;
-        margin: 0.3rem 0;
-      }
+@media (max-width: 550px) {
+  #contactos ul li {
+    font-size: 0.8rem;
+    margin: 0.3rem 0;
+  }
 }
-#contactos ul li a{
-    color: var(--color--general2);
+#contactos ul li a {
+  color: var(--color--general2);
 }
-#contactos ul li a:hover{
-    color: #000;
+#contactos ul li a:hover {
+  color: #000;
 }
 #contactos ul li i {
   margin-right: 5px;
 }
 /*footer's elements*/
 #footer {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 1.5rem;
-    width: 100%;
-    height: 50px;
-    background-color: var(--color--navBackground);
-    color: var(--color--general);
-    font-size: 0.7rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1.5rem;
+  width: 100%;
+  height: 50px;
+  background-color: var(--color--navBackground);
+  color: var(--color--general);
+  font-size: 0.7rem;
 }
-@media(max-width:550px){
-    #footer{
-        justify-content: center;
-        font-size: 0.5rem;
-    }
+@media (max-width: 550px) {
+  #footer {
+    justify-content: center;
+    font-size: 0.5rem;
+  }
 }
